Header alignment fix

--- a/app/ui_widgets/header.sass
+++ b/app/ui_widgets/header.sass
@@ -20,7 +20,7 @@ header
     height: $headerHeight
     width: 110px
     background: $highlightVeryThin //larger hover area
-    vertical-align: middle
+    vertical-align: top
   .logo h1
     position: absolute
     left: -9999px // Text only here for SEO
@@ -51,13 +51,15 @@ header
     padding: 0
   nav ul li
     display: inline-block
+  nav a,
+  .nav a
+    font-size: $fontSizeSmall
   nav a
     position: relative
     display: inline-block
     line-height: $headerHeight
     text-transform: uppercase
     color: $colorBrandContrastNeutral + 50
-    font-size: $fontSizeSmall
     font-weight: bold
     padding: 0 $spaceLil
   nav a:hover
